[package]
name = "wechat-hook"
authors = ["Gage Gao<fovegage@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["dylib"]
path = "src/lib.rs"

[dependencies]
winapi = { version = "*", features = ["errhandlingapi", "libloaderapi", "memoryapi", "psapi", "processthreadsapi", "windef", "winnt", "winuser"] }
